// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Product /> should render without crash 1`] = `
<div
  className="product-item"
>
  <h3>
    test
  </h3>
  <hr />
  <img
    alt="printer"
    className="product-item__image"
  />
  <div
    className="product-desc"
  >
    <h5>
      printer
    </h5>
    <p
      className="product-desc__price"
    >
      <span>
        $
      </span>
      12
    </p>
    <p
      className="product-desc__instock"
    >
      <span>
        In stock:
      </span>
      <span
        id="stock-message"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                640,
                512,
                Array [],
                "f242",
                "M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48zm-240 96H96v128h224V192z",
              ],
              "iconName": "battery-half",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
    </p>
    <p
      className="product-desc__order"
    >
      <span>
        Order:
      </span>
      <span>
        <input
          onChange={[Function]}
          type="number"
          value={1}
        />
        pcs
      </span>
    </p>
    <p
      id="stock-error"
    />
    <p
      className="product-desc__total"
    >
      Total price:
      <span
        id="total-price"
      >
        $12.00
      </span>
    </p>
    <div
      className="product-desc__buttons"
    >
      <AddToCartButton
        className="btn btn-primary"
        disabled={false}
        handleClickToCart={[Function]}
        product={
          Object {
            "name": "test",
            "pcsOrder": 1,
            "price": 12,
            "productId": undefined,
            "totalPrice": 12,
          }
        }
      />
      <button
        className="btn btn-danger"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f004",
                "M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z",
              ],
              "iconName": "heart",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Product /> should show diffrent icon for diffrent value inStock: empty battery 1`] = `
<FontAwesomeIcon
  border={false}
  className=""
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        640,
        512,
        Array [],
        "f244",
        "M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48z",
      ],
      "iconName": "battery-empty",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  symbol={false}
  title=""
  transform={null}
/>
`;

exports[`<Product /> should show diffrent icon for diffrent value inStock: full battery 1`] = `
<FontAwesomeIcon
  border={false}
  className=""
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        640,
        512,
        Array [],
        "f240",
        "M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48zm-48 96H96v128h416V192z",
      ],
      "iconName": "battery-full",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  symbol={false}
  title=""
  transform={null}
/>
`;

exports[`<Product /> should show diffrent icon for diffrent value inStock: medium battery 1`] = `
<FontAwesomeIcon
  border={false}
  className=""
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        640,
        512,
        Array [],
        "f242",
        "M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48zm-240 96H96v128h224V192z",
      ],
      "iconName": "battery-half",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  symbol={false}
  title=""
  transform={null}
/>
`;

exports[`<Product /> should show diffrent icon for diffrent value inStock: quater battery 1`] = `
<FontAwesomeIcon
  border={false}
  className=""
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        640,
        512,
        Array [],
        "f243",
        "M544 160v64h32v64h-32v64H64V160h480m16-64H48c-26.51 0-48 21.49-48 48v224c0 26.51 21.49 48 48 48h512c26.51 0 48-21.49 48-48v-16h8c13.255 0 24-10.745 24-24V184c0-13.255-10.745-24-24-24h-8v-16c0-26.51-21.49-48-48-48zm-336 96H96v128h128V192z",
      ],
      "iconName": "battery-quarter",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  symbol={false}
  title=""
  transform={null}
/>
`;
